backport 1.21.1 version